--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-ultralytics==8.1.0
-opencv-python-headless
+streamlit==1.31.1
+torch==2.1.0
+torchvision==0.16.0
+ultralytics==8.0.227
+opencv-python-headless==4.8.1.78
 numpy
 Pillow
-
 
