--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.31.1
-ultralytics==8.3.249
-torch==2.1.0+cpu
-torchvision==0.16.0+cpu
-opencv-python-headless==4.8.1.78
+ultralytics>=8.2.0,<8.3.0
+torch>=2.5.0
+torchvision>=0.20.0
+opencv-python-headless
 numpy
 pillow
